<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="36sp"
            android:fontFamily="sans-serif-smallcaps"/>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/cardview_dark_background"
            android:elevation="8dp"
            android:layout_height="2dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="30dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:hintEnabled="true"
            app:helperText="example_email@example.com">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="12dp"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"
            app:passwordToggleEnabled="true"

            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/password_icon"
                android:drawablePadding="12dp"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.ElevatedButton"
            app:backgroundTint="#35FFEA"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:text="@string/to_enter"
            android:fontFamily="sans-serif-smallcaps"
            android:id="@+id/sign_in_button"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.OutlinedButton"
            app:strokeColor="#35FFEA"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:text="@string/to_register"
            android:textColor="@color/green"
            android:fontFamily="sans-serif-smallcaps"
            android:id="@+id/to_register_button"
            />

    </LinearLayout>

</FrameLayout>
